Fix the menu using the wrong font

--- a/css/news.css
+++ b/css/news.css
@@ -10,6 +10,10 @@ ul {
   font-family: 'Roboto', sans-serif;
 }
 
+nav ul {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 #rightside {
   display: inline;
   float: left;
